--- a/src/components/contact-components/hero-contact/HeroContact.css
+++ b/src/components/contact-components/hero-contact/HeroContact.css
@@ -71,6 +71,7 @@
     border-radius: 3rem;
     font-weight: bold;
     margin-top: 0.5rem;
+    min-width: 10rem;
   }
   
   .social-media-button:hover {
